# ffmpeg-ai

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
assets/user_images/: README.txt
src/ffmpeg_ai/: __init__.py  __main__.py  cli.py  pipeline.py
src/ffmpeg_ai/ai/: images.py  openrouter.py  tts.py
src/ffmpeg_ai/ui/: display.py  widgets.py
src/ffmpeg_ai/video/: captions.py  composer.py  shorts.py
